syntax = "proto3";

package org.hse.nnbuilder.services;
import "google/protobuf/timestamp.proto";

enum TaskType {
  TrainNNClassification = 0;
  TrainNNRegression = 1;
  ApplyToData = 2;
}

enum TaskStatus {
  HaveNotStarted = 0;
  Processing = 1;
  Done = 2;
}

service TasksQueueService {
  rpc createtask (TaskCreationRequest) returns (TaskCreationResponse);
  rpc getinformation(GettingInformationRequest) returns (GettingInformationResponse);
}

// Creating new task
message TaskCreationRequest {
  TaskType name = 1;
  int64 nnId = 2;
  int64 dataId = 3;
}

message TaskCreationResponse {
  int64 taskId = 1;
}

// Asking information about a task
message GettingInformationRequest {
  int64 taskId = 1;
}

message GettingInformationResponse {
  TaskType taskName = 1;
  int64 nnId = 2;
  int64 dataId = 3;
  google.protobuf.Timestamp startTime = 4;
  TaskStatus taskStatus = 5;
}
